--- a/style.css
+++ b/style.css
@@ -2,15 +2,20 @@
     font-family: helvetica;
     src: url(./font/HelveticaNowText-Regular.ttf);
 }
+@font-face {
+    font-family: GrayQo;
+    src: url(./font/GreyQo-Regular.ttf);
+}
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: helvetica;
+    
 }
 html, body {
     height: 100%;
     width: 100%;
+    font-family: helvetica;
 }
 .main {
     min-height: 100vh;
@@ -19,6 +24,7 @@ html, body {
     justify-content: center;
     align-items: flex-start;
     padding-top: 30px;
+    background-color: #0e1119;
 }
 .cont {
     width: 400px;
@@ -29,11 +35,14 @@ html, body {
     box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, 
     rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
     border-radius: 5px;
+    background-color: beige;
 }
 .header {
     width: 100%;
     text-align: center;
-    font-size: 1vw;
+    font-size: 1.5vw;
+    letter-spacing: 1px;
+    font-family: GrayQo !important;
 }
 .main-list-cont {
     width: 100%;
@@ -79,7 +88,8 @@ html, body {
     box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
     rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
     display: grid;
-    grid-template-columns: 1fr 8fr 1fr;
+    grid-template-columns: 1fr 8fr 1fr 1fr;
+    gap: 2px;
 }
 .complete {
     text-decoration: line-through;
@@ -95,3 +105,17 @@ html, body {
     justify-content: center;
     align-items: center;
 }
+
+.edit {
+    padding: 4px;
+    border: none;
+    background-color: #0cc490;
+    color:  white;
+    border-radius: 2px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+
+  
